# potassium-thirty-seven-simulation

./: CMakeLists.txt  K37.cc  K37Config.hh  K37Config.hh.in  ProjectHome.md  README  build.sh  gui.mac  novis.mac  plannedDevelopment.txt  run.pl  vis.mac
Configuration/: upper_strip_detector_y.res
branches/DetectorResolution/: K37.cc  K37Config.hh.in  plannedDevelopment.txt
branches/DetectorResolution/configurationFiles/: K_37_INPUT.txt  upper_strip_detector_x.res
branches/DetectorResolution/include/: K37Config.hh  K37DetectorConstruction.hh  K37EventAction.hh  K37FermiFunction.hh  K37PrimaryGeneratorMessenger.hh  K37RunAction.hh  K37ScintillatorMessenger.hh  K37ScintillatorSD.hh  SplitString.hh
branches/DetectorResolution/src/: Aggregator.cc  GeantAggregator.cc  K37DetectorConstruction.cc  K37DetectorMessenger.cc  K37EventAction.cc  K37EventMessenger.cc  K37PhysicsList.cc  K37ScintillatorDigitizer.cc  K37ScintillatorHit.cc  K37StackingActionMessenger.cc  K37SteppingActionMessenger.cc
branches/backscattering/: build.sh  searchForPhrase  vis.mac
branches/backscattering/include/: BackscatterHit.hh  GeantAggregator.hh  K37ScintillatorHit.hh  K37StripDetectorHit.hh
branches/backscattering/src/: BackscatterHit.cc  K37CloudSize.cc  K37DetectorMessenger.cc  K37EventAction.cc  K37PhysicsConstructor.cc  K37PrimaryGeneratorAction.cc  K37RunAction.cc  K37StripDetectorSD.cc
branches/geant4_10/include/: K37Config.hh  K37ParticleConstructor.hh  K37PrimaryGeneratorAction.hh
branches/geant4_10/src/: K37DetectorConstruction.cc  K37EventGenerator.cc  K37PrimaryGeneratorAction.cc  K37RunAction.cc  K37RunMessenger.cc  K37StackingAction.cc
branches/geometry/: K37.cc  gui.mac  novis.mac
branches/geometry/include/: Aggregator.hh  K37CloudSize.hh  K37DetectorConstruction.hh  K37DetectorMessenger.hh  K37ElectronMCPSD.hh  K37EventGenerator.hh  K37PrimaryGeneratorAction.hh  K37PrimaryGeneratorMessenger.hh  K37RunAction.hh
configurationFiles/: lower_strip_detector_y.res
include/: Aggregator.hh  BackscatterHit.hh  GeantAggregator.hh  Generic_Channel.hh  Holstein_Event.hh  Isotope.hh  IsotopeMessenger.hh  JTW_Event.hh  K37AllPossibleEventInformation.hh  K37AnalysisNumbering.hh  K37AnnihilationPosition.hh  K37ArMinusDefinition.hh  K37CloudSize.hh  K37ComplexGammaFunction.hh  K37Config.hh  K37ContainerForStripInformation.hh  K37DetectorConstruction.hh  K37DetectorMessenger.hh  K37ElectricFieldSetup.hh  K37ElectronMCPHit.hh  K37EventAction.hh  K37EventGenerator.hh  K37EventGeneratorNoRecoilOrderEffects.hh  K37EventMessenger.hh  K37FieldMessenger.hh  K37HistogramManager.hh  K37ListOfVolumeNames.hh  K37MirrorHit.hh  K37MirrorSD.hh  K37PhysicsConstructor.hh  K37PhysicsList.hh  K37PrimaryGeneratorAction.hh  K37PrimaryGeneratorMessenger.hh  K37RecoilMCPHit.hh  K37RecoilMCPSD.hh  K37RunAction.hh  K37RunMessenger.hh  K37ScintillatorDigitizer.hh  K37ScintillatorHit.hh  K37ScintillatorMessenger.hh  (+16 more)
rootScripts/: K37Analysis.cpp
src/: Aggregator.cc  BackscatterHit.cc  GeantAggregator.cc  Holstein_Event.cc  Isotope.cc  IsotopeMessenger.cc  JTW_Event.cc  JTW_EventNoRecoilOrderEffects.cc  K37AllPossibleEventInformation.cc  K37ArMinusDefinition.cc  K37ArNeutralDefinition.cc  K37CloudSize.cc  K37ComplexGammaFunction.cc  K37ContainerForStripInformation.cc  K37DetectorConstruction.cc  K37DetectorMessenger.cc  K37ElectricFieldSetup.cc  K37ElectronMCPHit.cc  K37ElectronMCPSD.cc  K37EventAction.cc  K37EventGenerator.cc  K37EventMessenger.cc  K37FermiFunction.cc  K37FieldMessenger.cc  K37HistogramManager.cc  K37ListOfVolumeNames.cc  K37MirrorHit.cc  K37MirrorSD.cc  K37PhysicsList.cc  K37PrimaryGeneratorAction.cc  K37PrimaryGeneratorMessenger.cc  K37RecoilMCPHit.cc  K37RecoilMCPSD.cc  K37RunAction.cc  K37RunMessenger.cc  K37ScintillatorDigitizer.cc  K37ScintillatorMessenger.cc  K37ScintillatorMinusZHit.cc  K37ScintillatorPlusZSD.cc  K37ScintillatorSD.cc  (+10 more)
src/auxiliary/: CMakeLists.txt
tags/dec2012/: IOconfiguration.mac.in  README  TODO  vis.mac
tags/dec2012/src/: Isotope.cc  (+10 more)
trunk/: CMakeLists.txt  K37.cc  K37Config.hh  build.sh  run.pl  run1.mac  vis.mac
trunk/include/: Aggregator.hh  EventMaker.hh  GeantAggregator.hh  Generic_Channel.hh  Holstein_Event.hh  JTW_Event.hh  JTW_EventNoRecoilOrderEffects.hh  K37AllPossibleEventInformation.hh  K37Analysis.hh  K37AnalysisNumbering.hh  K37ArNeutralDefinition.hh  K37ArPlusOneDefinition.hh  K37CloudSize.hh  K37ComplexGammaFunction.hh  K37DetectorConstruction.hh  K37DetectorMessenger.hh  K37ElectricFieldSetup.hh  K37ElectronMCPHit.hh  K37EventAction.hh  K37EventGenerator.hh  K37EventMessenger.hh  K37FermiFunction.hh  K37FieldMessenger.hh  K37HistogramManager.hh  K37MirrorSD.hh  K37PhysicsList.hh  K37PrimaryGeneratorAction.hh  K37PrimaryGeneratorMessenger.hh  K37RecoilMCPHit.hh  K37RunAction.hh  K37RunMessenger.hh  K37ScintillatorHit.hh  K37ScintillatorMinusZSD.hh  K37ScintillatorPlusZHit.hh  K37StackingAction.hh  K37StackingActionMessenger.hh  K37SteppingAction.hh  K37SteppingActionMessenger.hh  K37SteppingVerbose.hh  K37StripDetectorMinusZHit.hh  (+3 more)
trunk/rootScripts/: quickAsym.cpp
trunk/src/: Aggregator.cc  GeantAggregator.cc  Holstein_Event.cc  Isotope.cc  JTW_Event.cc  K37AnnihilationPosition.cc  K37ArMinusDefinition.cc  K37ArPlusOneDefinition.cc  K37CloudSize.cc  K37ContainerForStripInformation.cc  K37DetectorConstruction.cc  K37DetectorMessenger.cc  K37ElectricFieldSetup.cc  K37ElectronMCPHit.cc  K37EventAction.cc  K37EventGenerator.cc  K37EventGeneratorNoRecoilOrderEffects.cc  K37EventMessenger.cc  K37FermiFunction.cc  K37FieldMessenger.cc  K37HistogramManager.cc  K37MirrorSD.cc  K37PhysicsList.cc  K37PrimaryGeneratorAction.cc  K37PrimaryGeneratorMessenger.cc  K37RecoilMCPSD.cc  K37RunAction.cc  K37RunMessenger.cc  K37ScintillatorDigitizer.cc  K37ScintillatorHit.cc  K37ScintillatorMinusZSD.cc  K37ScintillatorPlusZHit.cc  K37ScintillatorSD.cc  K37StackingAction.cc  K37SteppingAction.cc  K37SteppingVerbose.cc  K37StripDetectorHit.cc  K37StripDetectorMinusZHit.cc  K37StripDetectorMinusZSD.cc  K37StripDetectorSD.cc  (+1 more)
trunk/src/auxiliary/: GrabParameters.cc
(+14 files in other folders)
